--- a/resources/style.css
+++ b/resources/style.css
@@ -56,6 +56,10 @@ h1 {
     font-size : 1.5rem;
 }
 
+.bg-suivez-mobile {
+    background-image: url("../resources/img/vanilla.jpg");
+}
+
 /*Suivez-nous desktop*/
 .reseaux-desk {
     font-family: 'Sue Ellen Francisco', cursive;
